JAXWS-692 + test JAXWS-1099 fbugs/ide warnings in tools/wscompile and other touched files